[project]
name = "DRS"
version = "2.0.1"
authors = [
  { name="David Griffin", email="dgdguk@gmail.com" },
]
description = "DEPRECATED. An algorithm which attempted to generate uniformly sampled random vectors which sum to a given value, but could fail with uniformity. Use ConvolutionalFixedSum instead."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=2.2.5",
    "scipy>=1.15",
    "cffi>=1.17",
]

[project.urls]
Homepage = "https://github.com/dgdguk/drs"
Issues = "https://github.com/dgdguk/drs/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['drs']

[tool.cibuildwheel]
build-frontend = "build"